<resources>

    <string name="app_name">e药家智慧党建</string>
    <string name="str_homepage">首页</string>
    <string name="str_public">公共管理</string>
    <string name="str_party">党务管理</string>
    <string name="str_member">党员中心</string>
    <string name="str_home_member">党员之家</string>
    <string name="str_home_youth">青年之家</string>
    <string name="str_home_volunteer">志愿者之家</string>
    <string name="str_home_health">健康之家</string>
    <string name="str_home_employee">职工之家</string>
    <string name="str_home_study">在线学习</string>
    <string name="str_setting">设置</string>
    <string name="str_search">搜索</string>
    <string name="str_hometext">三门峡市医药总公司智慧党建以“务实、高效、便捷”为原则，开启智慧党建的新模式，独立开发“e药家智慧党建平台”。</string>
    <string name="title">e药家智慧党建</string>
    <string name="homepage_notice">三门峡市医药总公司智慧党建公告</string>
    <string name="search_hint">请输入查找内容</string>
    <string name="search_label_1">申请书</string>
    <string name="search_label_2">候选人</string>
    <string name="search_label_3">组织审批</string>
    <string name="search_label_4">组织生活会</string>
    <string name="search_label_5">民主生活会</string>
    <string name="search_label_6">党支部</string>
    <string name="search_label_7">推优党员</string>
    <string name="search_label_8">新党员</string>
    <string name="search_datalist_title">搜索结果</string>
    <string name="notice_datalist_title">公告</string>
    <string name="login">登录</string>
    <string name="login_account">请输入账号</string>
    <string name="login_password">请输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="register">注册</string>
    <string name="member_party_branch">网上党支部</string>
    <string name="member_partydues">党费查询</string>
    <string name="member_party_transform_n">组织\n关系转接</string>
    <string name="member_party_transform">组织关系转接</string>
    <string name="member_discussion">内部论坛</string>
    <string name="member_rules">规章制度</string>
    <string name="member_party_respond">党风廉洁自律</string>
    <string name="transform_into">转入组织选择</string>
    <string name="transform">关系转接</string>
    <string name="transform_confirm">确认转接</string>
    <string name="transform_cancel">取消</string>
    <string name="transform_branch_confirm">确认</string>
    <string name="transform_name">姓名：</string>
    <string name="transform_party_name">党组织名称：</string>
    <string name="transform_party_address">党组织所在地：</string>
    <string name="transform_time">转入本组织时间：</string>
    <string name="transform_from_party_name">转出党组织名称：</string>
    <string name="transform_from_party_address">转出党组织所在地：</string>
    <string name="transform_into_party_name">转入党组织名称：</string>
    <string name="transform_into_party_address">转入党组织所在地：</string>
    <string name="next_page">下一页</string>
    <string name="last_page">上一页</string>
    <string name="return_to_change">返回修改</string>
    <string name="party_dues_hand">已交</string>
    <string name="party_dues_search_type">查询类型：身份证</string>
    <string name="id_number">证件号码：</string>
    <string name="please_id_number">请输入证件号码</string>
    <string name="search">查询</string>
    <string name="search_result">查询结果</string>
    <string name="str_pay">缴费</string>
    <string name="str_inter_party_online">在线入党</string>
    <string name="str_organization_life">组织生活</string>
    <string name="str_member_manage">党员管理</string>
    <string name="str_member_education">党员教育</string>
    <string name="str_democratic_comment">民主评议</string>
    <string name="str_manage_rewards">党员奖惩</string>
    <string name="str_creation_fighting">创先争优</string>
    <string name="str_special_project">专项活动</string>
    <string name="str_change_term">换届选举</string>
    <string name="str_assistance_pauper">困难补助</string>
    <string name="str_pay_money"> 共计0元</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <!-- applet -->
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>

    <!-- verify -->
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>

    <!-- format -->
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_share">分享</string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>
    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="prepay_id_wx_text">prepayid</string>
    <string name="invoke_ip">invoke_ip</string>
    <string name="prepay_id_value">wx20141126110244e3e4bc4e580111072793</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="launch_from_wx">Launch From Weixin</string>

    <!-- WXMediaMessage -->
    <string name="input_openid">输入openid</string>
    <string name="input_scope">输入scope</string>
    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>
    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">发送文本</string>
    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>
    <string name="send_img">发送图片</string>

    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>

    <string name="send_img_file_not_exist">文件不存在</string>
    <string name="send_file">发送文件</string>

    <string-array name="send_file_item">
        <item>发送文件的二进制数据</item>
        <item>发送文件的本地路径</item>
    </string-array>

    <string name="send_file_file_not_exist">文件不存在</string>
    <string name="send_pic">发送照片</string>
    <string name="send_music">发送音乐</string>

    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>

    <string name="send_video">发送视频</string>

    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>

    <string name="send_webpage">发送网页</string>

    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>

    <string name="send_appdata">发送app消息</string>

    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>

    <string name="send_emoji">发送表情消息</string>

    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>
    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>

    <!-- GetFromWXActivity -->
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>

    <!-- PayActivity -->
    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>
    <string name="pay_by_wxap">调起微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <!-- BC-test -->
    <string name="bc_pay" formatted="false">微信支付</string>
    <string name="bc_pay_wx_title">微信支付</string>
    <string name="bc_pay_goto_wx">打开微信支付</string>

</resources>