<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:background="@drawable/homepage_top_background" >

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/top_imageview_height"
            android:layout_height="@dimen/top_imageview_height"
            android:layout_marginLeft="@dimen/top_imageview_distance"
            android:layout_marginTop="@dimen/top_imageview_distance"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_height"
            android:layout_marginLeft="@dimen/top_height"
            android:layout_marginRight="@dimen/top_height"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/str_home_member"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_bg"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingTop="80dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:background="@drawable/touming"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_notice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="公告："
                        android:textColor="#000000"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/text_notice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/str_hometext"
                        android:textColor="@color/add_manager"
                        android:textSize="13sp" />
                </LinearLayout>
                  <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal" >
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/lin_member_party_branch"
                        android:layout_width="@dimen/add_party_six"
                        android:layout_height="@dimen/add_party_six"
                        android:background="@drawable/member_background"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:paddingTop="10dp"
                            android:src="@drawable/dangzhibu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/member_party_branch"
                            android:textColor="@color/add_manager"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/lin_member_party_dues"
                        android:layout_width="@dimen/add_party_six"
                        android:layout_height="@dimen/add_party_six"
                        android:background="@drawable/member_background"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:paddingTop="15dp"
                            android:src="@drawable/dangfeichaxun" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/member_partydues"
                            android:textColor="@color/add_manager"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/lin_member_discussion"
                        android:layout_width="@dimen/add_party_six"
                        android:layout_height="@dimen/add_party_six"
                        android:background="@drawable/member_background"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:paddingTop="10dp"
                            android:src="@drawable/neibuluntan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/member_discussion"
                            android:textColor="@color/add_manager"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/lin_member_party_transform"
                        android:layout_width="@dimen/add_party_six"
                        android:layout_height="@dimen/add_party_six"
                        android:background="@drawable/member_background"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/guanxizhuanjie" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/member_party_transform_n"
                            android:textColor="@color/add_manager"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/lin_member_rules"
                        android:layout_width="@dimen/add_party_six"
                        android:layout_height="@dimen/add_party_six"
                        android:background="@drawable/member_background"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:paddingLeft="5dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/guizhangzhidu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/member_rules"
                            android:textColor="@color/add_manager"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/lin_member_respond"
                        android:layout_width="@dimen/add_party_six"
                        android:layout_height="@dimen/add_party_six"
                        android:background="@drawable/member_background"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:paddingTop="10dp"
                            android:src="@drawable/zerenqu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="党风\n廉洁自律"
                            android:textColor="@color/add_manager"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>